# Brand-Rating-Analysis

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
scr/: __init__.py  cli.py  csv_reader.py  formatting.py
scr/reports/: __init__.py  average_rating.py
tests/: conftest.py  test_average_rating.py  test_cli.py  test_csv_reader.py  test_formatting.py  test_reports_registry.py
